package com.example.user_service.model;

public enum TokenType {
    EMAIL_VERIFICATION,
    PASSWORD_RESET,
    REFRESH_TOKEN
}